feat: Implement `printTransactions` command